# doit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
.claude/: settings.json  settings.local.json
.claude/commands/: doit.checkin.md  doit.constitution.md  doit.documentit.md  doit.implement.md  doit.plan.md  doit.planit.md  doit.researchit.md  doit.review.md  doit.roadmapit.md  doit.scaffold.md  doit.scaffoldit.md  doit.specify.md  doit.specit.md  doit.tasks.md  doit.test.md  doit.testit.md
.doit/config/: context.yaml  provider_backup.yaml
.doit/hooks/: post-merge.sh  pre-commit.sh  pre-push.sh
.doit/memory/: completed_roadmap.md  constitution.md  roadmap.md  roadmap_completed.md  tech-stack.md
.doit/state/: fixit-542.json  fixit-544.json  fixit-545.json  fixit-595.json  fixit-598.json  fixit-658.json
.doit/templates/: competitive-analysis-template.md  docs-index-template.md  interview-notes-template.md  plan-template.md  research-template.md  tasks-template.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/prompts/: doit.checkin.prompt.md  doit.constitution.prompt.md  doit.documentit.prompt.md  doit.fixit.prompt.md  doit.implementit.prompt.md  doit.planit.prompt.md  doit.researchit.prompt.md  doit.reviewit.prompt.md  doit.roadmapit.prompt.md  doit.scaffoldit.prompt.md  doit.specit.prompt.md  doit.taskit.prompt.md  doit.testit.prompt.md
.github/workflows/: ci.yml  macos-e2e-tests.yml  publish.yml  windows-e2e-tests.yml
.specify/memory/: roadmap_completed.md
.specify/templates/: checklist-template.md  plan-template.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
docs/features/: 003-scaffold-doit-commands.md  004-review-template-commands.md  005-mermaid-visualization.md  006-docs-doit-migration.md  008-doit-roadmapit-command.md  009-doit-documentit-command.md  012-command-recommendations.md  015-docs-branding-cleanup.md  016-scripts-cleanup.md  017-roadmap-template-cleanup.md  018-develop-branch-setup.md  019-doit-tutorials.md  020-constitution-improvements.md  021-copilot-agent-fix.md  022-docs-logo-integration.md  023-copilot-prompts-sync.md  024-unified-templates.md  025-git-hooks-workflow.md  026-ai-context-injection.md  027-template-context-injection.md  028-docs-tutorial-refresh.md  029-spec-validation-linting.md  030-guided-workflows.md  031-init-workflow-integration.md  032-status-dashboard.md  033-spec-task-crossrefs.md  034-fixit-workflow.md  035-auto-mermaid-diagrams.md  036-spec-analytics-dashboard.md  037-memory-search-query.md  038-context-roadmap-summary.md  039-github-roadmap-sync.md  040-spec-github-linking.md  041-milestone-generation.md  042-team-collaboration.md  043-unified-cli.md  044-git-provider-abstraction.md  046-constitution-tech-stack-split.md  047-provider-config-wizard.md  048-gitlab-provider.md  (+15 more)
docs/guides/: cli-conventions.md  workflow-system-guide.md
docs/templates/: agent-skills.md  commands.md  copilot-prompts.md  enhancements.md  index.md  root-templates.md  schemas.md
docs/tutorials/: 01-greenfield-tutorial.md  02-existing-project-tutorial.md  03-team-collaboration-tutorial.md  04-gitlab-provider-tutorial.md  creating-workflows.md  index.md  toc.yml
media/: README.md
memory/: diagram-patterns.md
scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: update-agent-context.ps1
specs/001-doit-command-refactor/: current-functionality.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-update-doit-templates/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-scaffold-doit-commands/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/004-review-template-commands/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/005-mermaid-visualization/: data-model.md  plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/006-docs-doit-migration/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/007-007-doit-cli-rename/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-doit-roadmapit-command/: plan.md  research.md  review-report.md  spec.md  tasks.md
specs/009-doit-documentit-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-cli-project-setup/: data-model.md  plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/011-init-scripts-copy/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/012-command-recommendations/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/013-publish-pypi/: plan.md  research.md  spec.md  tasks.md
specs/014-github-repo-protections/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/015-docs-branding-cleanup/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/016-scripts-cleanup/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/017-roadmap-template-cleanup/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/018-develop-branch-setup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-doit-tutorials/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/020-constitution-improvements/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/021-copilot-agent-fix/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
specs/022-docs-logo-integration/: plan.md  quickstart.md  research.md  review-report.md  spec.md  tasks.md
templates/: checklist-template.md  personas-output-template.md  plan-template.md  spec-template.md
tests/: __init__.py  conftest.py
(+852 files in other folders)
