[project]
name = "doit-toolkit-cli"
version = "0.1.15"
description = "Doit CLI - A tool to bootstrap your projects for Spec-Driven Development (SDD)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sean Barlow", email = "sbarlow@barlowtech.com"}
]
requires-python = ">=3.11"
keywords = ["cli", "spec-driven-development", "sdd", "ai", "development-workflow", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/seanbarlow/doit"
Documentation = "https://github.com/seanbarlow/doit#readme"
Repository = "https://github.com/seanbarlow/doit.git"
Issues = "https://github.com/seanbarlow/doit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-tmp-files>=0.0.2",
]
advanced = [
    "tiktoken>=0.5.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
doit = "doit_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doit_cli", "src/doit_toolkit_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "windows: tests that run only on Windows",
    "unix: tests that run only on Unix-like systems",
    "macos: tests that run only on macOS",
    "powershell: PowerShell script validation tests",
    "e2e: end-to-end tests",
    "filesystem: filesystem-specific tests",
    "bsd: tests BSD utility compatibility",
    "unicode: tests Unicode handling",
    "slow: tests that take longer than 10 seconds",
    "ci: tests that should run in CI",
]

